<resources>
    <string name="app_name">身边</string>
    <string name="share">物品共享</string>
    <string name="discover">发现</string>
    <string name="firstPage">首页</string>
    <string name="attention">关注</string>
    <string name="mine">我的</string>
    <string name="visit">上门服务</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="home_home">首页</string>
    <string name="home_find">发现</string>
    <string name="home_search">搜索</string>
    <string name="home_profile">我的</string>
    <string name="toy">玩具</string>
    <string name="power_bank">充电宝</string>
    <string name="umbrella">雨伞</string>
    <string name="clothing">服装</string>
    <string name="book">图书</string>
    <string name="search_hint">搜索</string>
    <string name="action_settings">动作设置</string>
    <string name="menu_search">菜单搜索</string>
</resources>
