<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.henlinkeji.shenbian.shenbian.fragments.HomeFagment">

    <!-- TODO: Update blank fragment layout -->

    <com.amap.api.maps.MapView

        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </com.amap.api.maps.MapView>

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_tab"
        android:background="@color/white"
        android:actionViewClass="android.widget.SearchView"

        >

    </SearchView>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchView"
        android:background="@color/white"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/toy"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/power_bank"
            android:checked="true"
            android:textColor="@color/blue"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/umbrella"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/clothing"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/book"
            />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/top_tab"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/inkiness"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/share"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableBottom="@mipmap/selectedbar"
            android:drawablePadding="-10dp"
            android:gravity="center"
            android:paddingEnd="10dp"
            android:paddingStart="80dp"
            android:text="@string/share"
            android:textColor="@color/white"
            android:textSize="18sp" />


        <RadioButton
            android:id="@+id/visit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:paddingBottom="-5dp"
            android:paddingEnd="80dp"
            android:paddingStart="10dp"
            android:text="@string/visit"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </RadioGroup>

</RelativeLayout>
